--- a/client/src/components/css/JournalReader.css
+++ b/client/src/components/css/JournalReader.css
@@ -5,3 +5,13 @@
 	right: 0;
 	bottom: 0;
 }
+
+ul.journalList{
+	display: block;
+}
+
+.displayJournal{
+	height: 380px;
+	display: block;
+	padding: 11px;
+}
