--- a/client/src/components/css/Reader/Journal.css
+++ b/client/src/components/css/Reader/Journal.css
@@ -1,11 +1,11 @@
 .Journal{
 	position: absolute;
-	width: 90%;
+	width: 95%;
 	height: 350px;
 	background-color: #EEEEEE;
 	margin-top: 30px;
 	border-radius: 30px;
-	left: 5%;
+	left: 2.5%;
 }
 
 .journalTitle{
@@ -16,4 +16,54 @@
 	color: #616161;
 	font-weight: bold;
 	font-size: 25px;
+}
+
+.arrowBack{
+	position: absolute;
+	top:30%;
+	left: 5px;
+}
+
+.arrowNext{
+	position: absolute;
+	top:30%;
+	right: 5px;
+}
+
+.touristAttractionList{
+	position: absolute;
+	left: 5%;
+	top: 17%;
+    display: table;
+    list-style: none;
+    padding: 0;
+}
+
+.displayTouristAttraction{
+	display: inline-block;
+	padding: 11px;
+}
+
+.hashtagList{
+	position: absolute;
+	left: 4%;
+	bottom: 5%;
+    display: table;
+    list-style: none;
+    padding: 0;
+}
+
+.displayTag{
+	display: inline-block;
+	padding: 10px;
+}
+
+
+
+.seeMoreButton{
+	float: left;
+	position: absolute;
+	bottom: 5%;
+	right: 5%;
+	padding:5px;
 }
