--- a/client/src/components/css/Reader/SearchBar.css
+++ b/client/src/components/css/Reader/SearchBar.css
@@ -9,7 +9,7 @@
 	padding: 15px;
 	position: relative;
 	top: 10px;
-	left: 84%;
+	left: 86%;
 	float: left;
 }
 
@@ -18,14 +18,14 @@
 	position: relative;
 	left: 8%;
 	top: 35px;
-	width: 250px;
+	width: 20%;
 }
 
 .searchPurpose{
 	float: left;
 	position: relative;
 	top: 35px;
-	width: 250px;
+	width: 20%;
 	left: 13%;
 }
 
@@ -33,6 +33,6 @@
 	float: left;
 	position: relative;
 	top: 35px;
-	width: 250px;
+	width: 20%;
 	left: 18%;
 }
