--- a/client/src/components/css/JournalEditor.css
+++ b/client/src/components/css/JournalEditor.css
@@ -1,8 +1,17 @@
-.JournalEditor{
+.JournalEditorHalf{
 	position: fixed;
 	top: 70px;
 	left: 0;
 	right: 70%;
+	bottom: 0;
+	background-color: #EEEEEE;
+}
+
+.JournalEditorFull{
+	position: fixed;
+	top: 70px;
+	left: 0;
+	right: 0;
 	bottom: 0;
 	background-color: #EEEEEE;
 }
