--- a/client/src/components/css/Reader/Author.css
+++ b/client/src/components/css/Reader/Author.css
@@ -1,8 +1,8 @@
 .authorPicture{
 	position: absolute;
 	float: left;
-	left: 60%;
-	margin-top: 20px;
+	left: 0;
+	
 }
 
 .authorName{
@@ -11,10 +11,15 @@
 	font-size: 20px;
 	width: 200px;
 	float: left;
-	left: 65%;
-	margin-top: 25px;
+	left: 60px;
+	margin-top: 5px;
 }
 
 .Author:hover{
 	font-weight: bold;
 }
+
+.Author{
+	position: absolute;
+}
+
