--- a/client/src/components/css/Reader/PopularAttraction.css
+++ b/client/src/components/css/Reader/PopularAttraction.css
@@ -14,11 +14,11 @@
 
 .placeName{
 	position: absolute;
-	font-size: 25px;
+	font-size: 30px;
 	font-weight: bold;
 	color: #616161;
-	left: 15%;
-	top: 90px;
+	left: 10%;
+	top: 80px;
 }
 
 .popularAttractionName{
@@ -32,7 +32,6 @@
 	position: absolute;
 	top: 100px;
 	font-size: 20px;
-
 }
 
 .attractionInfop{
@@ -43,4 +42,20 @@
 	position: absolute;
 	left: -40px;
 	top: 50px;
+}
+
+ul.allComments{
+	position: absolute;
+	left: 15%;
+	right: 0;
+	top: 730px;
+	display: block;
+	padding-bottom: 30px;
+	height: 150px;
+}
+
+.comment{
+	height: 130px;
+	display: block;
+	padding: 11px;
 }
