Finished SelectMenu and TooltipIconButton. Working on ControlTopBar and ControlButtomBar

--- a/client/src/components/css/JournalEditor.css
+++ b/client/src/components/css/JournalEditor.css
@@ -1,9 +1,8 @@
 .JournalEditorHalf{
-	position: fixed;
-	top: 70px;
-	left: 0;
-	right: 70%;
-	bottom: 0;
+	position: relative;
+	width: 30%;
+	height: 100%;
+	float: left;
 	background-color: #EEEEEE;
 }
 
