--- a/client/src/components/css/Editor/SelectMenu.css
+++ b/client/src/components/css/Editor/SelectMenu.css
@@ -1,7 +1,15 @@
 .selectMenu-container {
-    width: 100%;
-    height: 8%;
+    position: relative;
     display: inline-block;
+    height: 100%;
+}
+
+.tripSelect-selectMenu-container {
+    width: 50%;
+}
+
+.daySelect-selectMenu-container {
+    width: 30%;
 }
 
 .selectMenu {
@@ -10,10 +18,15 @@
 }
 
 .text-container {
-    position: relative;
+    position: absolute;
     width: 80%;
-    height: 100%;
+    top: 25%;
+    left: 0%;
     display: inline-block;
+}
+
+.daySelect-text-container {
+    top: 28%;
 }
 
 .text {
@@ -21,14 +34,16 @@
     width: 80%;
     height: 80%;
     top: 27%;
-    left: 10%;
+    left: 5%;
     font-size: 2em;
+    overflow: hidden;
 }
 
 .button-container {
-    position: relative;
+    position: absolute;
     width: 20%;
-    height: 100%;
+    top: 2%;
+    left: 80%;
     display: inline-block;
 }
 
@@ -37,7 +52,7 @@
     width: 80%;
     height: 80%;
     top: 20%;
-    left: 10%;
+    left: -5%;
 }
 
 .dark-green {
