--- a/client/src/components/css/Reader/TouristAttractionFull.css
+++ b/client/src/components/css/Reader/TouristAttractionFull.css
@@ -18,6 +18,10 @@
 	color: #616161;
 }
 
+.touristAttractionFullName:hover{
+	text-decoration: underline;
+}
+
 .favoriteAttactionFullIcon{
 	position: absolute;
 	left: 31%;
@@ -60,3 +64,4 @@ ul.starsDisplay{
 	font-size: 20px;
 	overflow: auto;
 }
+
