debug and tidy up

--- a/client/src/component/css/AboutUs.css
+++ b/client/src/component/css/AboutUs.css
@@ -103,6 +103,14 @@
 	right: 25%;
 }
 
+#interviewPeople{
+	left: 42.5%;
+}
+
+#interviewPeopleName{
+	top: 25%;
+}
+
 .thanksPersonTitle{
 	position: absolute;
 	width: 100%;
