--- a/client/src/component/css/TeamMember.css
+++ b/client/src/component/css/TeamMember.css
@@ -21,6 +21,7 @@
 	text-align: center;
 	top: 60%;
 	color: #424242;
+	font-size: 16px;
 }
 
 .memberName{
@@ -38,6 +39,7 @@
 	text-align: center;
 	top: 85%;
 	color: #757575;
+	font-size: 16px;
 }
 
 
